homelab/qgis/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qgis
  namespace: qgis
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  labels:
    app: qgis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qgis
  template:
    metadata:
      labels:
        app: qgis
    spec:
      tolerations:
        - key: "node.kubernetes.io/unreachable"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 30
        - key: "node.kubernetes.io/not-ready"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 30
      securityContext:
        runAsUser: 1000
        runAsGroup: 100
        fsGroup: 100
      containers:
        - name: qgis
          image: quay.io/bedata/jupyterlab/qgis/base:ltr@sha256:93ef03d1c290d269db5ca127abc9eba65af71ef75b870eefcfc8e0e6a396e4cd
          args:
            - start-notebook.sh
            - --ServerApp.token=
            - --ServerApp.password=
          ports:
            - name: http
              containerPort: 8888
          resources:
            requests:
              cpu: 500m
              memory: 256Mi
            limits:
              cpu: 4
              memory: 6Gi
          startupProbe:
            httpGet:
              path: /api/status
              port: http
            failureThreshold: 60
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/status
              port: http
            periodSeconds: 30
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/status
              port: http
            periodSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - name: home
              mountPath: /home/jovyan
            - name: shm
              mountPath: /dev/shm
      volumes:
        - name: home
          persistentVolumeClaim:
            claimName: qgis-home
        - name: shm
          emptyDir:
            medium: Memory
            sizeLimit: 1Gi
