homelab/qgis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qgis
  namespace: qgis
  labels:
    app: qgis
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: qgis
