homelab/qgis/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qgis
  namespace: qgis
  annotations:
    argocd.argoproj.io/sync-wave: "3"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: "nc-maintenance-maintenance-errors@kubernetescrd,authentik-authentik@kubernetescrd"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - qgis.k8s.hu.ls
      secretName: wildcard-k8s-hu-ls-tls
  rules:
    - host: qgis.k8s.hu.ls
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qgis
                port:
                  number: 80
